
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>fr.kaddath.apps</groupId>
    <artifactId>fluxx-web</artifactId>
    <packaging>war</packaging>
    <version>1.0</version>
    <name>fluxx-web</name>
    <url>http://fluxx.fr.cr/</url>
    
    <properties>
        <glassfish-version>3.0</glassfish-version>
        <jsf-version>2.0.2-b10</jsf-version>
        <commons-lang-version>2.3</commons-lang-version>
        <environment-name>development</environment-name>
    </properties>

    <scm>
        <connection>scm:git://github.com/jsmadja/fluxx.git/fluxx-web</connection>
        <developerConnection>scm:git://github.com/jsmadja/fluxx.git/fluxx-web</developerConnection>
    </scm>

    <profiles>
        <profile>
            <id>continuous-integration</id>
        </profile>
        <profile>
            <id>production</id>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>fr.kaddath.apps</groupId>
            <artifactId>fluxx-core</artifactId>
            <version>1.0</version>
        </dependency>
         <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.ejb</artifactId>
            <version>${glassfish-version}</version>
            <scope>provided</scope>
        </dependency>
                <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>6.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-api</artifactId>
            <version>${jsf-version}</version>
        </dependency>
        <dependency>
            <groupId>com.sun.faces</groupId>
            <artifactId>jsf-impl</artifactId>
            <version>${jsf-version}</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>taglibs</groupId>
            <artifactId>standard</artifactId>
            <version>1.1.2</version>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>6.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <directory>${basedir}/src/etc/${environment-name}</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <inherited>true</inherited>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <version>2.3.1</version>
                    <compilerArgument>-Djava.endorsed.dirs=${glassfish-home}/modules/endorsed</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <configuration>
                    <warName>fluxx</warName>
                    <webappDirectory>${basedir}/src/webapp</webappDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>glassfish-maven-repository.dev.java.net</id>
            <name>GlassFish Maven Repository</name>
            <url>http://download.java.net/maven/glassfish</url>
        </repository>
        <repository>
            <id>EclipseLink Repo</id>
            <name>Eclipse maven repository http://eclipse.ialto.org/rt/eclipselink/maven.repo/</name>
            <url>http://mirror.csclub.uwaterloo.ca/eclipse/rt/eclipselink/maven.repo/</url>
        </repository>
        <repository>
            <id>Maven2</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Maven2</name>
        </repository>
        <repository>
            <id>Maven2 Repo 2</id>
            <url>http://repo2.maven.org/maven2</url>
            <name>Maven2 Repo 2</name>
        </repository>
        <repository>
            <id>JBoss</id>
            <url>http://repository.jboss.com/maven2</url>
            <name>JBoss</name>
        </repository>
                <repository>
            <id>java.net2</id>
            <name>Repository hosting the jee6 artifacts</name>
            <url>http://download.java.net/maven/2</url>
        </repository>
        <repository>
            <id>Java</id>
            <url>http://download.java.net/maven/2/</url>
            <name>Java</name>
        </repository>
                <repository>
            <url>http://download.java.net/maven/2/</url>
            <id>jsf20</id>
            <layout>default</layout>
            <name>Repository for library Library[jsf20]</name>
        </repository>
        <repository>
            <id>sourceforge</id>
            <url>http://oss.sonatype.org/content/groups/sourceforge/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>

    </repositories>
</project>
